...
            android:layout_marginRight="16dp"
            android:textSize="@dimen/details_ingredient_title"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_details_ingredients"
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

...
            android:layout_marginRight="16dp"
            android:textSize="@dimen/details_ingredient_title"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps_list"
            android:name="com.magiclabyrinth.bakingapp.RecipeDetailFragment"
            android:layout_width="@dimen/item_width"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
...
